src_old/objects/QuestionDefinedResponse__c.object
<CustomObject>
    <description>Question Defined Response defines the acceptable responses for a Question. Question Defined Response is related to Question and Question Defined Response Variant.</description>
    <fields>
        <fullName>DefinedResponseOrder__c</fullName>
        <label>Defined Response Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefinedResponseText__c</fullName>
        <label>Defined Response Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionCode__c</fullName>
        <formula>Exception__r.ExceptionCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exception Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exception</label>
        <referenceTo>Exception__c</referenceTo>
        <relationshipLabel>Question Defined Response</relationshipLabel>
        <relationshipName>Question_Defined_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneHubAnswerId__c</fullName>
        <externalId>true</externalId>
        <label>One Hub Answer Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Question Defined Response (SurveyQuestionBank)</relationshipLabel>
        <relationshipName>Question_Defined_Response1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Question Defined Response</label>
    <nameField>
        <displayFormat>QBDR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Defined Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>